fix pre overflow

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -60,6 +60,7 @@ span + span {
     font-family: Consolas,"Liberation Mono",Menlo,Monaco,Courier,monospace;
     margin: 10px 0;
     padding: 10px 15px;
+    white-space: pre-wrap;
   }
   .content-image,
   .content-example {
